# bitchanger

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.in  NEWS  README  README.md  config.h  config.h.in  config.status  configure  configure.ac
exa/: a.bch
src/: Makefile  Makefile.am  Makefile.in  bchi.c  bchi.h  bf2bch.c  egobch.c  egobch.h  optimize.c  optimize.h
src/.deps/: bchi.Po  bf2bch.Po  egobch.Po  optimize.Po
